[project]
name = "smartprints-retail-sdk"
version = "0.1.0"
description = "The Python SDK for integrating with SmartPrints Retail services"
readme = "README.md"
authors = [
    { name = "abdelmalek0", email = "djamaa.abdelmalek98@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "smartprints-core",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/smartprints_retail"]

[tool.uv.sources]
smartprints-core = { path = "../smartprints-core" }
